--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,7 @@
 site_name: Efitrac
 pages:
-- Home: index.md
-- About: about.md
+- Home: 'index.md'
+- Module Release Notes: 
+	- 'Sales': 'modules/sales.md'
+- About: 
+	- 'Release Notes': 'about/release-notes.md'
