--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ repo_url: https://github.com/pararaton/efitrac-wiki
 pages:
 - Home: index.md
 - End User Guide:
+    - Menu: enduser/menu.md
     - Access Control List (ACL): enduser/acl/access-control-list.md
     - Access Control List - Adv: enduser/acl/access-control-list-adv.md
 - Module Release Notes:
