--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ pages:
     - Menu: enduser/menu.md
     - Access Control List (ACL): enduser/acl/access-control-list.md
     - Access Control List - Adv: enduser/acl/access-control-list-adv.md
+- Developer:
+    - Custom View: developer/custom-view.md
 - Module Release Notes:
     - Sales: modules/sales.md
 - About:
