--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ pages:
     - Access Control List - Adv: enduser/acl/access-control-list-adv.md
 - Developer:
     - Custom View: developer/custom-view.md
-    - Versionning: developer/versionning.md
+    - Versionning: developer/versioning.md
 - Module Release Notes:
     - Sales: modules/sales.md
 - About:
