--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,9 @@ pages:
 - Developer:
     - Custom View: developer/custom-view.md
     - Versionning: developer/versioning.md
+- API:
+    - Overview: api/overview.md
+    - Storage: api/storage/storage.md
 - Module Release Notes:
     - Sales: modules/sales.md
 - About:
