--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ pages:
     - Menu: enduser/menu.md
     - Access Control List (ACL): enduser/acl/access-control-list.md
     - Access Control List - Adv: enduser/acl/access-control-list-adv.md
+    - Dashboard View: enduser/dashboard-view.md
 - Developer:
     - API:
         - Overview: api/overview.md
@@ -19,7 +20,7 @@ pages:
         - Logout: api/logout.md   # Logout selalu diletakkan di paling bawah.
     - View:
         - Custom View: developer/custom-view.md
-        - Inherit View: developer/inherit-view.md
+        - Inherit View: developer/inherit-view.md        
     - Model:
         - AbstractModel: developer/abstractmodel.md
         - Model Inheritance: developer/model-inheritance.md
